--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
   <div class="form-container">
     <h2>Formulario</h2>
-   
+    <form action="#" method="post">
+      <label for="name">Nombre:</label>
+      <input type="text" id="name" name="name" required>
+
+      <label for="email">Correo Electrónico:</label>
+      <input type="email" id="email" name="email" required>
+      
       <button type="submit">Enviar</button>
     </form>
   </div>
