Agregar campos de teléfono y dirección en desarrollo-2

--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulario</title>
+  <title>Formulario de Contacto</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="form-container">
-    <h2>Formulario</h2>
+    <h2>Formulario de Contacto</h2>
+    <form action="#" method="post">
+      <label for="name">Telefono:</label>
+      <input type="text" id="Telefono" name="Telefono" required>
+
+      <label for="Dirección">Dirección:</label>
+      <input type="text" id="Dirección" name="Dirección" required>
+
    
       <button type="submit">Enviar</button>
     </form>
